[tool.poetry]
name = "ide-productivity-tutorial"
version = "0.1.0"
description = "An exercise to demonstrate how to use the features of an IDE (PyCharm and VS Code) to code effectively."
authors = ["David Tan <davidtan@thoughtworks.com>"]
packages = [{include = "ide_productivity", from = "src"}]

[tool.poetry.dependencies]
pandas = "1.5.1"
scikit-learn = "1.1.3"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "22.10.0"
pylint = "2.15.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"